loopd+looprpc: add REST compatible status calls
